--- a/packages/server-api/package.json
+++ b/packages/server-api/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/nodemailer": "^7.0.9",
     "typescript": "^5.9.3"
   },
   "dependencies": {
@@ -23,6 +24,7 @@
     "koa": "^3.1.1",
     "koa-bodyparser": "^4.4.1",
     "mysql2": "^3.16.1",
+    "nodemailer": "^8.0.0",
     "zod": "^4.3.5"
   }
 }
